# WhiteFoot

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CODEGEN-PARITY.md  CONSTITUTION.md  DECISION_SPRINT.md  HANDOVER.md  LICENSE  Makefile  PATTERNS.md  README.md  THE-PLAN.md  WORKFLOW.md  codegen-parity.json
archive/: DECISION_SPRINT.md  README.md  ROADMAP.md
capabilities/: README.md
codegen-corpus/: README.md  schema.json
compiler/: Cargo.toml  Makefile  PLAN.md  README.md  dependencies.json  sources.txt  test_ast_validate.py  test_frontend.py  test_lexer.py  test_llvm_buffer.py  test_llvm_linear.py  test_llvm_scalar.py  test_llvm_scanner.py  test_llvm_supported.py  test_llvm_text.py  test_output.py  test_parser.py  test_parser_control.py  test_parser_expressions.py  test_parser_items.py  test_self_parse.py  test_semantic_body.py  test_semantic_buffer.py  test_semantic_facts.py  test_semantic_globals.py  test_semantic_prelude.py  test_semantic_reborrow.py  test_semantic_reborrow_chunk_wrapper.py  test_semantic_reborrow_chunk_wrapper_quad.py  test_semantic_reborrow_probe.py  test_semantic_reborrow_span.py  test_semantic_scanner.py  test_semantic_unit.py  test_semantic_writer.py  test_semantic_writer_index.py  test_source_names.py  test_symbols.py  toolchain-lock.json
conformance/: README.md  manifest.jsonl  runner.py
docs/: constitution.md  ideas.md  (+5 more)
optimizer-language-research/implementation/phase5-resource-profile/frontend-observer/: Cargo.toml  README.md
optimizer-language-research/implementation/phase5-resource-profile/frontend-observer/src/: main.rs
(+1276 files in other folders)
